--- a/projetJEE/pom.xml
+++ b/projetJEE/pom.xml
@@ -36,36 +36,51 @@
             <version>${spring.version}</version> 
         </dependency> 
         <dependency>     
-        <groupId>org.springframework</groupId>     
-        <artifactId>spring-webmvc</artifactId>     
-        <version>${spring.version}</version> 
-    </dependency> 
-    <dependency>     
-        <groupId>com.fasterxml.jackson.core</groupId>     
-        <artifactId>jackson-databind</artifactId>     
-        <version>${fasterxml.jackson.version}</version> 
-    </dependency> 
-    <dependency>     
-        <groupId>com.fasterxml.jackson.core</groupId>     
-        <artifactId>jackson-core</artifactId>     
-        <version>${fasterxml.jackson.version}</version> 
-    </dependency> 
-    <dependency>     
-        <groupId>com.fasterxml.jackson.core</groupId>     
-        <artifactId>jackson-annotations</artifactId> 
-        <version>${fasterxml.jackson.version}</version> 
-    </dependency> 
-    <dependency>     
-        <groupId>javax.servlet</groupId>     
-        <artifactId>javax.servlet-api</artifactId>     
-        <version>${javax.servlet.version}</version>     
-        <scope>provided</scope> 
-    </dependency> 
-    <dependency>     
-        <groupId>jstl</groupId>     
-        <artifactId>jstl</artifactId>     
-        <version>${jstl.version}</version> 
-    </dependency>
+            <groupId>org.springframework</groupId>     
+            <artifactId>spring-webmvc</artifactId>     
+            <version>${spring.version}</version> 
+        </dependency> 
+        <dependency>     
+            <groupId>com.fasterxml.jackson.core</groupId>     
+            <artifactId>jackson-databind</artifactId>     
+            <version>${fasterxml.jackson.version}</version> 
+        </dependency> 
+        <dependency>     
+            <groupId>com.fasterxml.jackson.core</groupId>     
+            <artifactId>jackson-core</artifactId>     
+            <version>${fasterxml.jackson.version}</version> 
+        </dependency> 
+        <dependency>     
+            <groupId>com.fasterxml.jackson.core</groupId>     
+            <artifactId>jackson-annotations</artifactId> 
+            <version>${fasterxml.jackson.version}</version> 
+        </dependency> 
+        <dependency>     
+            <groupId>javax.servlet</groupId>     
+            <artifactId>javax.servlet-api</artifactId>     
+            <version>${javax.servlet.version}</version>     
+            <scope>provided</scope> 
+        </dependency> 
+        <dependency>     
+            <groupId>jstl</groupId>     
+            <artifactId>jstl</artifactId>     
+            <version>${jstl.version}</version> 
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.3.1</version>
+        </dependency>    
     </dependencies>
 
     <build>
