--- a/projetJEE/pom.xml
+++ b/projetJEE/pom.xml
@@ -80,6 +80,12 @@
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>3.3.1</version>
+        </dependency>
+        <!-- Log4j -->
+        <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
         </dependency>    
     </dependencies>
 
