--- a/projetJEE/pom.xml
+++ b/projetJEE/pom.xml
@@ -81,6 +81,21 @@
             <artifactId>jquery</artifactId>
             <version>3.3.1</version>
         </dependency>    
+        <dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-jpa</artifactId>
+    <version>2.1.5.RELEASE</version>
+</dependency>
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.4.1.Final</version>
+</dependency>
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>
     </dependencies>
 
     <build>
