--- a/projetJEE/pom.xml
+++ b/projetJEE/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>jquery</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>popper.js</artifactId>
+            <version>1.14.1</version>
+         </dependency>
         <!-- Log4j -->
         <dependency>
                 <groupId>log4j</groupId>
