getUserInfo register getStoreInfo done

--- a/projetJEE/pom.xml
+++ b/projetJEE/pom.xml
@@ -9,6 +9,7 @@
 
     <name>projetJEE</name>
 
+
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,6 +31,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180813</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+            <version>3.3.2.Final</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
